rounded some borders, testing rounded styles, fixing image alignment.

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -770,6 +770,9 @@ nav a:hover {
 .align-center {
   align-items: center;
 }
+.align-c-center {
+  align-content: center;
+}
 
 .col-auto {
   flex-grow: 1;
@@ -836,7 +839,7 @@ img.image {
 }
 
 div.right {
-  text-align: right;
+  margin: auto;
 }
 
 .style-none {
@@ -872,10 +875,10 @@ div.col-3 {
   flex-wrap: nowrap;
 }
 
-/* TOOLTIP VIA https://www.w3schools.com/css/css_tooltip.asp*/
-
-/* Tooltip container */
-
+.br {
+  border: 2px solid inherit;
+  border-radius: 10px;
+}
 @media screen and (max-width: 640px) {
   header {
     background-color: var(--primary);
@@ -936,6 +939,10 @@ div.col-3 {
   .col-sm-12 {
     flex: 0 0 100%;
   }
+  div.right {
+    margin: auto;
+    padding-top: var(--spacing-one);
+  }
 }
 
 /* col-md */
@@ -986,6 +993,10 @@ div.col-3 {
 
   .col-md-12 {
     flex: 0 0 100%;
+  }
+  div.right {
+    margin: auto;
+    padding-top: var(--spacing-one);
   }
 }
 
